# gw-ampl-est

./: .gitignore  AGENTS.md  pyproject.toml
docs/: ADAPTIVE_SCIENTIFIC_PRODUCTION_PLAN.md  CALIBRATION_AND_SBC_PLAN.md  CODEX_SETUP.md  DATA_PATH_AUTHORITY.md  DATA_SOURCES.md  DECISIONS.md  DIRECT_TARGET_STAGE_A_PLAN.md  ENGINEERING_RELEASE_POLICY.md  FAILURES.md  FINAL_EVALUATION_ANALYSIS_PLAN.md  FINAL_EVALUATION_INFERENCE_RUNBOOK.md  LEARNING_CURVE_STOPPING_RULE.md  LEGACY_CODE_REUSE_DECISION.md  LEGACY_DATA_DECISION.md  LENS_SOLVER_INTERFACE.md  NOVELTY_AND_POSITIONING.md  PHASE2_PREREGISTRATION.md  PHASE4_PROBE_TRAINING_EXECUTION_RUNBOOK.md  PHASE4_RELEASE_GATE.md  PHASE4_STAGE_B_EXECUTION_PLAN.md  PHYSICS_CONVENTIONS.md  PRIVILEGED_INPUT_POLICY.md  PROJECT_STATE.md  PROPOSAL_EFFICIENCY_QUALIFICATION_PLAN.md  PROPOSAL_V2_EXECUTABLE_SPEC.md  PROPOSAL_V3_TARGET_ANCHORED_SPEC.md  PROVENANCE_AND_SEEDS.md  REAL_NOISE_AND_CATALOG_FUTURE_PROTOCOL.md  REFERENCE_BASELINE_PLAN.md  REMOTE_DATA_AND_GENERATOR_AUDIT_20260712.md  REMOTE_TOPOLOGY.md  SPLIT_POLICY.md  TERMINAL_131K_TRAINING_PLAN.md  V2_SCHEMA_SPEC.md  literature_matrix.csv
examples/: v2_metadata_example.json  v2_metadata_schema.json
manifests/: legacy_code_inventory.csv  legacy_dataset_inventory.csv  legacy_file_inventory.csv  legacy_snapshot_checksums.sha256
prompts/: PHASE0_REMOTE_AUDIT.md  PHASE1A1_SCHEMA_HARDENING.md  PHASE1A_PHYSICS_SCHEMA.md  PHASE1B1_SOLVER_TIME_CLEANUP.md  PHASE1B_V2_SMOKE.md  PHASE2A_PREREGISTRATION_HARDENING.md  PHASE2_PREREGISTRATION.md  PHASE3A_GENERATOR_QUALIFICATION.md  (+7 more)
(+531 files in other folders)
